# intent-distillation-tool

./: .env.example  .gitignore  README.md  cli.py  config.yaml  pyproject.toml  requirements.txt
examples/: README.md  example_inputs.txt  multi-turn-med-dialog.sh
examples/data/: medical_dialogues.csv
src/distillers/: intent_conversation_distiller.py  intent_question_distiller.py  intent_tag_distiller.py  medical_intent_tagger.py  medical_taxonomy_builder.py
src/exporters/: dataset_exporter.py
src/llm/: client.py
src/llm/prompts/: distill_conversations.py  distill_intent_questions.py  distill_intent_tags.py  medical_intent_tagging.py  medical_taxonomy_builder.py
src/parsers/: __init__.py  medical_dialog_parser.py
src/utils/: config_loader.py  taxonomy_utils.py
